RESOLVED FIXED87401
Made WeakSet per-block instead of per-heap
https://bugs.webkit.org/show_bug.cgi?id=87401
Summary Made WeakSet per-block instead of per-heap
Geoffrey Garen
Reported 2012-05-24 10:35:29 PDT
Made WeakSet per-block instead of per-heap
Attachments
Patch (16.20 KB, patch)
2012-05-24 10:43 PDT, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2012-05-24 10:43:30 PDT
Geoffrey Garen
Comment 2 2012-05-24 14:18:15 PDT
Note You need to log in before you can comment on or make changes to this bug.